# voice-assistant-v2

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/va/: main.py
src/va/audio/: capture.py  playback.py  ring_buffer.py  types.py
src/va/config/: va_config.py
src/va/intent/: intent_engine.py  types.py  worker.py
src/va/ipc/: events.py
src/va/orchestrator/: orchestrator_engine.py  turn_context.py
src/va/response/: llm_engine.py  pipeline.py  types.py  worker.py
src/va/stt/: pipeline.py  stt_engine.py  types.py  vad_engine.py  worker.py
src/va/tts/: phonemizer_engine.py  pipeline.py  synthesis_engine.py  types.py  worker.py
src/va/ww/: wakeword_engine.py  worker.py
